--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,6 +40,27 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.2</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+					<?m2e execute onConfiguration?>
+						<id>process-classes</id>
+						<phase>process-classes</phase>
+						<configuration>
+							<target>
+								<chmod file="target/classes/webDrivers/2.35/linux64_chromedriver" perm="755" />
+								<chmod file="target/classes/webDrivers/2.35/mac64_chromedriver" perm="755" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<resources>
 		</resources>
